# eloquent-ext-filereader

./: Attach.cpp  CMakeLists.txt  FileReader.cpp  FileReader.h  FileReaderAttach.cpp  FileReaderAttach.h  FileReaderFactory.cpp  FileReaderFactory.h  LICENSE.txt  MyReader.h  MyReaderFactory.h
FileReader.xcodeproj/: project.pbxproj
FileReader.xcodeproj/project.xcworkspace/xcuserdata/nathanwehr.xcuserdatad/: UserInterfaceState.xcuserstate
FileReader.xcodeproj/xcuserdata/nathanwehr.xcuserdatad/xcschemes/: FileReader.xcscheme  xcschememanagement.plist
